panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__initialisation__struct__test_error_too_many_subobjects.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/initialisation/struct/test_error_too_many_subobjects.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: excess element in struct initialiser
   ╭─[panko/tests/cases/initialisation/struct/test_error_too_many_subobjects.c:7:25]
   │
 7 │     struct T t = {1, 2, 3};
   │              ┬          ┬  
   │              │          ╰── trying to initialise element at index 2 for `struct T~0 complete`
   │              │             
   │              ╰───────────── while initialising this variable
───╯
